--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,7 @@
 extends base.pug
 
 block content 
-    h1 Edit
+    h4 Change Title of video
+    form(method="POST") 
+        input(name="title", type="text", placeholder="Video Title", value=video.title, required)
+        input(type="submit", value="save")
