--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -5,5 +5,5 @@ mixin video(info)
         ul
             li #{info.rating} / 5
             li #{info.comments} comments.
-            li Posted #{info.createAt}.
+            li Posted #{info.createdAt}.
             li #{info.views} views.
