--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,9 @@
 extends base.pug
 
 block content 
-    h4 Change Title of video
+    h4 Update Video
     form(method="POST") 
-        input(name="title", type="text", placeholder="Video Title", value=video.title, required)
+        input(name="title", type="text", placeholder="Video Title", value=video.title, maxlength=80, required)
+        input(name="description", placeholder="Description" type="text", value=video.description, minlength=20, required)
+        input(name="hashtags", placeholder="Hashtags, separated by comma." type="text", value=video.hashtags.join(), required)
         input(type="submit", value="save")
