--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -18,7 +18,7 @@ html(lang="ko")
                         li 
                             a(href="/logout") Log Out
                         li 
-                            a(href="/my-profile") #{loggedInUser.name} profile
+                            a(href="/my-profile") #{loggedInUser.name}'s profile
                     else
                         li 
                             a(href="/join") Join
