--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,6 +7,9 @@ block content
         input(name="username", type="text", placeholder="Username", required)
         input(name="password", type="password", placeholder="Password", required)
         input(type="submit", value="Login")
+        br
+        //- github 계정 연동하기
+        a(href="/users/github/start") Continue with Github &rarr;
     hr
     div 
         span Don't have an account? 
