github 로그인 수정 및 logout 기능 구현

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -16,7 +16,7 @@ html(lang="ko")
                     //- 로그인 유무 확인
                     if loggedIn
                         li 
-                            a(href="/logout") Log Out
+                            a(href="/users/logout") Log Out
                         li 
                             a(href="/my-profile") #{loggedInUser.name}'s profile
                     else
