--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -3,7 +3,11 @@ extends base.pug
 block content 
     if errorMessage 
         span=errorMessage
-    form(method="POST")
+    img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
+    //- file을 서버에 업로드 하기 위해 encode
+    form(method="POST", enctype="multipart/form-data")
+        label(for="avatar") Avatar 
+        input(type="file", id="avatar", name="avatar", accept="image/*")
         input(placeholder="Email", name="email", type="email", required, value=loggedInUser.email)
         input(placeholder="Name", name="name", type="text", required, value=loggedInUser.name)
         input(placeholder="Username", name="username", type="text", required, value=loggedInUser.username)
