--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -19,6 +19,8 @@ html(lang="ko")
                             a(href="/users/edit") Edit Profile
                         li
                             a(href="/videos/upload") Upload Video
+                        li
+                            a(href=`/users/${loggedInUser._id}`) My profile
                         li 
                             a(href="/users/logout") Log Out
                     else
