--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -1,4 +1,8 @@
 extends base.pug
+include mixins/video
 
 block content 
-    h1 hello
+    each item in videos 
+        +video(item)
+    else 
+        li Sorry nothing found.
