--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -2,7 +2,7 @@ extends base.pug
 include mixins/video
 
 block content 
-    each item in videos 
+    each item in user.videos 
         +video(item)
     else 
         li Sorry nothing found.
