--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -6,6 +6,7 @@ html(lang="ko")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet" href="/assets/css/styles.css")
     body
         header 
             h1=pageTitle
