--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,6 +1,6 @@
 @import "./_variables.scss";
 
 body {
-  background-color: $red;
-  color: white;
+  background-color: aliceblue;
+  color: black;
 }
