--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -3,9 +3,8 @@ extends base.pug
 block content 
     if errorMessage 
         span=errorMessage
-    img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
     //- file을 서버에 업로드 하기 위해 encode
-    form(method="POST", enctype="multipart/form-data")
+    form(method="POST", enctype="multipart/form-data").edit-profile__form
         label(for="avatar") Avatar 
         input(type="file", id="avatar", name="avatar", accept="image/*")
         input(placeholder="Email", name="email", type="email", required, value=loggedInUser.email)
@@ -15,5 +14,5 @@ block content
         input(type="submit", value="Update Profile")
         //- 소셜 로그인 유저에게 보이지 않기
         if !loggedInUser.socialOnly
-            hr
-            a(href="change-password") Change Password &rarr;
+            div.edit-profile__password
+                a(href="change-password") Change Password &rarr; 
