--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,4 +12,4 @@ html(lang="ko")
         main 
             block content
         include partials/footer.pug
-        script(src="/assets/js/main.js")
+    block scripts
