--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,4 +12,5 @@ html(lang="ko")
         main 
             block content
         include partials/footer.pug
-    block scripts
+    script(src="/assets/js/main.js")
+    block scripts 
