--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "./screens/home.scss";
 @import "./screens/profile.scss";
 @import "./screens/search.scss";
+@import "./screens/upload.scss";
 
 // Defaults
 a {
