--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,3 +1,5 @@
+include mixins/message
+
 doctype html
 html(lang="ko")
     head
@@ -8,6 +10,10 @@ html(lang="ko")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css")
         link(rel="stylesheet" href="/assets/css/styles.css")
     body
+        if messages.error 
+            +message("error", messages.error)
+        if messages.info 
+            +message("info", messages.info)
         include partials/header.pug            
         main 
             block content
