--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,20 +3,19 @@ include mixins/message
 doctype html
 html(lang="ko")
     head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle} | #{siteName}
-        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css")
-        link(rel="stylesheet" href="/assets/css/styles.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
+        link(rel="stylesheet", href="/static/css/styles.css")
     body
-        if messages.error 
+        if messages.error
             +message("error", messages.error)
-        if messages.info 
+        if messages.info
             +message("info", messages.info)
-        include partials/header.pug            
-        main 
+        if messages.success
+            +message("sucess", messages.success)
+        include partials/header                
+        main
             block content
-        include partials/footer.pug
-    script(src="/assets/js/main.js")
-    block scripts 
+        include partials/footer
+    script(src="/static/js/main.js") 
+    block scripts
