--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,3 +1,4 @@
+
 header
     a(href="/").header__logo
         i.fab.fa-youtube
@@ -15,12 +16,16 @@ header
                     a(href="/users/logout")  Log Out
                 li
                     a(href=`/users/${loggedInUser._id}`)
-                        if !loggedInUser.avatarUrl === ""
+                        if loggedInUser.avatarUrl === ""
                             span 😀
                         else
-                            img.header__avatar(src=loggedInUser.avatarUrl)
+                            if loggedInUser.avatarUrl
+                                if loggedInUser.avatarUrl.includes("github")
+                                    img.header__avatar(src=loggedInUser.avatarUrl)
+                                else
+                                    img.header__avatar(src=loggedInUser.avatarUrl)
             else
                 li
-                    a(href="/login")  Login
+                    a(href="/login")  Login                        
                 li
                     a(href="/join").header__btn  Join
