--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,7 +1,9 @@
+
+   
 extends base.pug
 
-block content 
-     div.upload__container
+block content
+    div.upload__container
         div.upload__video
             video#preview
             button#actionBtn.social__btn Start Recording
@@ -11,10 +13,11 @@ block content
             label(for="video") Video File
             input(type="file", accept="video/*", required, id="video", name="video")
             label(for="thumb") Thumbnail File
-            input(type="file", accept="image/*", id="thumb", name="thumb")
+            input(type="file", accept="image/*", required, id="thumb", name="thumb")
             input(placeholder="Title", required, type="text", name="title", maxlength=80)
-            input(placeholder="Description", required, type="text", name="description", minlength=5)
+            input(placeholder="Description", required, type="text", name="description", minlength=20)
             input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
             input(type="submit", value="Upload Video")
-block scripts 
-    script(src="/assets/js/recorder.js") 
+
+block scripts
+    script(src="/static/js/recorder.js") 
