--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,9 +1,9 @@
 extends base.pug
 
-block content
+block content 
     h4 Update Video
-    form(method="POST")
-        input(name="title", placeholder="Video Title", value=video.title, required)
-        input(placeholder="Description", required, type="text", name="description", minlength=20, value=video.description)
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join())
-        input(value="Save",type="submit")
+    form(method="POST") 
+        input(name="title", type="text", placeholder="Video Title", value=video.title, maxlength=80, required)
+        input(name="description", placeholder="Description" type="text", value=video.description, minlength=20, required)
+        input(name="hashtags", placeholder="Hashtags, separated by comma." type="text", value=video.hashtags.join(), required)
+        input(type="submit", value="save")
