--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,9 +1,9 @@
-extends base
+extends base.pug
 include mixins/video
 
-block content
+block content 
     div.video-grid
         each video in videos
             +video(video)
         else
-            span.empty__message No videos found
+            span.empty__message No videos found 
