--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,12 +1,11 @@
-extends base
+extends base.pug
 
-
-block content
-    if errorMessage
+block content 
+    if errorMessage 
         span=errorMessage
     form(method="POST")
-        input(placeholder="Username", name="username", type="text", required)
-        input(placeholder="Password", name="password", type="password", required)
+        input(name="username", type="text", placeholder="Username", required)
+        input(name="password", type="password", placeholder="Password", required)
         input(type="submit", value="Login")
         include partials/social-login
     div.auth-switch
