--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,4 +1,3 @@
-
 header
     a(href="/").header__logo
         i.fab.fa-youtube
@@ -16,16 +15,12 @@ header
                     a(href="/users/logout")  Log Out
                 li
                     a(href=`/users/${loggedInUser._id}`)
-                        if loggedInUser.avatarUrl === ""
+                        if !loggedInUser.avatarUrl === ""
                             span 😀
                         else
-                            if loggedInUser.avatarUrl
-                                if loggedInUser.avatarUrl.includes("github")
-                                    img.header__avatar(src=loggedInUser.avatarUrl)
-                                else
-                                    img.header__avatar(src=loggedInUser.avatarUrl)
+                            img.header__avatar(src="/" + loggedInUser.avatarUrl)
             else
                 li
-                    a(href="/login")  Login                        
+                    a(href="/login")  Login
                 li
                     a(href="/join").header__btn  Join
