--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -1,14 +1,13 @@
 extends base.pug
 include mixins/video
 
-block content
+block content 
     form(method="GET").search__form
-        input(placeholder="Search by title",name="keyword", type="text")
+        input(placeholder="Search by title", type="text", name="keyword")
         button
             i.fas.fa-search
-
     div.video-grid
         each video in videos 
             +video(video)
         else
-            span.empty__message No videos found
+            span.empty__message No videos found 
